html framework ready

--- a/index.html
+++ b/index.html
@@ -38,17 +38,20 @@
         </div>
 
     </nav>
-
+      
+    <!-- Search Module -->
     <main class="container">
         <form class="form-inline" role="form">
             <label class="control-label" for="searchPubliser">Publishers</label>
             <div class="right-inner-addon">
-                <i class="icon-search"></i>
+                <button class="" type="button"><i class="glyphicon glyphicon-search"></i></button>
                 <input type="search" class="form-control" id="searchPubliser" placeholder="Search Publishers" />
+
             </div>
         </form>
     </main>
-
+    
+    <!-- Footer -->
     <footer>
         <div class="container">
             <a class="brand" href="#">
@@ -67,7 +70,7 @@
     </footer>
 
     <!-- jquery JavaScript  -->
-    <script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
     <!-- Bootstrap core JavaScript  -->
     <script src="libs/bootstrap/js/bootstrap.min.js"></script>
     <!-- Angular JavaScript  -->
