--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     </nav>
       
     <!-- Search Module -->
-    <main class="container">
-        <form class="form-inline" role="form" ng-controller="searchCtrl">
+    <main class="container" ng-controller="searchCtrl">
+        <form class="form-inline" role="form" >
             <label class="control-label" for="searchPubliser">Publishers</label>
             <div class="right-inner-addon">
                 <button class="" type="button"><i class="glyphicon glyphicon-search"></i></button>
@@ -49,9 +49,13 @@
 
             </div>
         </form>
-        <li ng-repeat="i in sites | searchFor:keywords">
-                    <p>{{i.siteName}}
-        </li>
+        <ul>
+            <li class="search-results" ng-repeat="site in sites | unique:'id'">
+                <a href="{{site.siteUrl}}">{{site.siteName}}</a>
+                <p>{{site.description}}</p>
+            </li>
+        </ul>
+
     </main>
     
     <!-- Footer -->
@@ -73,12 +77,14 @@
     </footer>
 
     <!-- jquery JavaScript  -->
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+    <script src="libs/jquery/jquery.min.js"></script>
     <!-- Bootstrap core JavaScript  -->
     <script src="libs/bootstrap/js/bootstrap.min.js"></script>
     <!-- Angular JavaScript  -->
     <script src="libs/angular/angular.min.js"></script>
     <!-- Custom Angular JavaScript  -->
     <script src="js/app.js"></script>
+    <script src="js/common/dataFactory.js"></script>
+    <script src="js/modules/search/searchController.js"></script>
   </body>
 </html>
